--- a/index.html
+++ b/index.html
@@ -5,15 +5,107 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 		<script
-			src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.178.0/three.tsl.min.js"
-			integrity="sha512-so3cMsW4jOl7aOUIIL13OZn9UajXI7djqyueEDzJYa0LloQZq7C4SMn+7xaPGkL8ZJDnyikbRE8B9n7ikvYG3Q=="
+			src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.158.0/three.min.js"
+			integrity="sha512-/WaZCC76Yn6MLEoK6b9np9yiLBet/RngBS33X1P0SHuag6j2E0e5rT7jbA2CvXCydN6+FkDYNx8FBM+vkzsthw=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.umd.js"></script>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+			rel="stylesheet"
+		/>
 		<title>Greeting Card ThreeJS</title>
 	</head>
 
 	<body>
-		<h1 class="text-4xl font-bold underline">Hello World</h1>
+		<section>
+			<h1 class="text-4xl font-bold italic text-center">Hello World</h1>
+
+			<div class="flex justify-center">
+				<button
+					id="transformBtn"
+					style="position: absolute; z-index: 1"
+					class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-3 text-center"
+				>
+					Transform
+				</button>
+			</div>
+		</section>
+
+		<script>
+			// Inisialisasi scene, camera, renderer
+			const scene = new THREE.Scene();
+			const camera = new THREE.PerspectiveCamera(
+				75,
+				window.innerWidth / window.innerHeight,
+				0.1,
+				1000
+			);
+			const renderer = new THREE.WebGLRenderer();
+			renderer.setSize(window.innerWidth, window.innerHeight);
+			document.body.appendChild(renderer.domElement);
+
+			const points = [];
+			const positionsTerrain = [];
+			const positionsGrid = [];
+			const totalDots = 100;
+
+			// Generate posisi acak dan grid
+			for (let i = 0; i < totalDots; i++) {
+				const x = (Math.random() - 0.5) * 20;
+				const y = Math.sin(i) * 2;
+				const z = (Math.random() - 0.5) * 20;
+				positionsTerrain.push([x, y, z]);
+
+				const gridX = (i % 10) * 2 - 10;
+				const gridY = Math.floor(i / 10) * 2 - 10;
+				positionsGrid.push([gridX, gridY, 0]);
+			}
+
+			// Fungsi buat point
+			function createPoint() {
+				const geometry = new THREE.SphereGeometry(0.2, 8, 8);
+				const material = new THREE.MeshBasicMaterial({ color: 0x00ffff });
+				return new THREE.Mesh(geometry, material);
+			}
+
+			// Tambahkan titik ke scene
+			for (let i = 0; i < totalDots; i++) {
+				const point = createPoint();
+				point.position.set(...positionsTerrain[i]);
+				scene.add(point);
+				points.push(point);
+			}
+
+			// Tombol transform
+			document.getElementById("transformBtn").addEventListener("click", () => {
+				for (let i = 0; i < points.length; i++) {
+					new TWEEN.Tween(points[i].position)
+						.to(
+							{
+								x: positionsGrid[i][0],
+								y: positionsGrid[i][1],
+								z: positionsGrid[i][2],
+							},
+							2000
+						)
+						.easing(TWEEN.Easing.Exponential.InOut)
+						.start();
+				}
+			});
+
+			camera.position.z = 30;
+
+			function animate(time) {
+				requestAnimationFrame(animate);
+				TWEEN.update(time);
+				renderer.render(scene, camera);
+			}
+
+			animate();
+		</script>
 	</body>
 </html>
